feat: add unit tests for Spotify service and controller, enhance security configuration, and update application properties